--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@
     width: 20vw;
 } */
 
+.center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Horizontal centering */
+    align-items: center; /* Vertical centering */
+    /* height: 100vh;  */
+  }
+  
